ferriskey/ui-gatewayapi-private.example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ferriskey-ui
  namespace: ferriskey
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-system
      sectionName: https
  hostnames:
    - ferriskey.example.tld
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: ferriskey-api
          port: 3333
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ferriskey-webapp
          port: 80
